--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "pengsz.jpg"
   bio              : "Assistant Professor, Central South University"
   location         : "Changsha, China"
-  employer         : ""
+  employer         : 
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com.sg/citations?user=V2KUfigAAAAJ&hl"
   email            : "pengshiz at 126.com"
