--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /teaching/  
 
   - title: "Papers"
-    url: /papers/    
+    url: /talks/    
 
   - title: "Books"
     url: /portfolio/
