--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : 
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com.sg/citations?user=V2KUfigAAAAJ&hl"
-  email            : "pengshiz@126.com"
+  email            : "pengshiz at 126 dot com"
   researchgate     : "https://www.researchgate.net/profile/Shizhe-Peng"
   uri              :
   bitbucket        :
