--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/  
 
-  - title: "Papers"
-    url: /talks/    
+  - title: "Resources"
+    url: /talks/
 
   - title: "Books"
     url: /portfolio/
