--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shizhe Peng"
   avatar           : "pengsz.jpg"
-  bio              : "Assistant Professor, Central South University"
+  bio              : "Lecturer, Changsha University of Science and Technology"
   location         : "Changsha, China"
   employer         : 
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
