--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Resources"
     url: /resources/
         
-  - title: "Blog Posts"
+  - title: "News"
     url: /year-archive/
 
   - title: "Guide"
